feat: 12.17 Spring 과제

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CRUD! 😛</title>
-    <link rel="stylesheet" href="/src/main/resources/static/style.css" />
-    <style>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CRUD! 😛</title>
+  <link rel="stylesheet" href="/style.css" />
+  <!-- <style>
       body {
         margin: 0;
         padding: 0;
@@ -449,242 +450,282 @@
         color: #fff;
         border: none;
       }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <!-- 학생 추가 팝업 -->
-      <div class="write-popup">
-        <div class="editor">
-          <div class="input-box">
-            <label>학생 이름 : </label>
-            <input type="text" placeholder=" 이름을 입력하세요..." />
-          </div>
-          <div class="input-box">
-            <label>학생 나이 : </label>
-            <input type="number" placeholder=" 나이를 입력하세요..." />
-          </div>
-          <div class="input-box">
-            <label>연락처 : </label>
-            <input type="number" placeholder=" - 를 제거하고 입력하세요." />
-          </div>
-          <div class="input-box">
-            <label>주소 </label>
-            <input type="text" placeholder=" 주소를 입력하세요..." />
-            <button class="postBtn" onclick="getPostCode()">우편번호 찾기</button>
-          </div>
-          <div class="btn-area">
-            <a href="#" class="btn-cancel" onclick="">등록 취소</a>
-            <a href="#" class="btn-success" onclick="">학생 등록</a>
-          </div>
+    </style> -->
+</head>
+
+<body>
+  <div class="container">
+    <!-- 학생 추가 팝업 -->
+    <div class="write-popup">
+      <div class="editor">
+        <div class="input-box">
+          <label>학생 이름 : </label>
+          <input id="add-studentName" type="text" placeholder=" 이름을 입력하세요..." />
+        </div>
+        <div class="input-box">
+          <label>학생 나이 : </label>
+          <input id="add-studentAge" type="number" placeholder=" 나이를 입력하세요..." />
+        </div>
+        <div class="input-box">
+          <label>연락처 : </label>
+          <input id="add-studentPhone" type="number" placeholder=" - 를 제거하고 입력하세요." />
+        </div>
+        <div class="input-box">
+          <label>주소 </label>
+          <input id="add-studentAddr" type="text" placeholder=" 주소를 입력하세요..." />
+          <button class="postBtn" onclick="getPostCode()">우편번호 찾기</button>
+        </div>
+        <div class="btn-area">
+          <a href="#" class="btn-cancel" onclick="">등록 취소</a>
+          <a href="#" class="btn-success" onclick="studentAdd()">학생 등록</a>
         </div>
       </div>
-      <!-- 학생정보 수정 -->
-      <div class="update-popup">
-        <div class="editor">
-          <div class="close">
-            <a href="#" class="btn-close">닫기</a>
-          </div>
-          <div class="input-box">
-            <label>학생 번호 : </label>
-            <input type="number" value="7899" readonly />
-          </div>
-          <div class="input-box">
-            <label>학생 이름 : </label>
-            <input type="text" value="현상원" />
-          </div>
-          <div class="input-box">
-            <label>학생 나이 : </label>
-            <input type="number" value="88" placeholder=" 나이를 입력하세요..." />
-          </div>
-          <div class="input-box">
-            <label>연락처 : </label>
-            <input type="number" value="010-4097-****" placeholder=" - 를 제거하고 입력하세요." />
-          </div>
-          <div class="input-box">
-            <label>주소 </label>
-            <input type="text" value="대전 선화동 방산빌딩 지하 53층" placeholder=" 주소를 입력하세요..." />
-            <button class="postBtn" onclick="getPostCode()">우편번호 찾기</button>
-          </div>
-          <div class="btn-area">
-            <a href="#" class="btn-update" onclick="">수정</a>
-            <a href="#" class="btn-delete" onclick="">삭제</a>
-          </div>
+    </div>
+    <!-- 학생정보 수정 -->
+    <div class="update-popup">
+      <div class="editor">
+        <div class="close">
+          <a href="#" class="btn-close">닫기</a>
+        </div>
+        <div class="input-box">
+          <label>학생 번호 : </label>
+          <input type="number" value="7899" readonly />
+        </div>
+        <div class="input-box">
+          <label>학생 이름 : </label>
+          <input type="text" value="현상원" />
+        </div>
+        <div class="input-box">
+          <label>학생 나이 : </label>
+          <input type="number" value="88" placeholder=" 나이를 입력하세요..." />
+        </div>
+        <div class="input-box">
+          <label>연락처 : </label>
+          <input type="number" value="010-4097-****" placeholder=" - 를 제거하고 입력하세요." />
+        </div>
+        <div class="input-box">
+          <label>주소 </label>
+          <input type="text" value="대전 선화동 방산빌딩 지하 53층" placeholder=" 주소를 입력하세요..." />
+          <button class="postBtn" onclick="getPostCode()">우편번호 찾기</button>
+        </div>
+        <div class="btn-area">
+          <a href="#" class="btn-update" onclick="">수정</a>
+          <a href="#" class="btn-delete" onclick="">삭제</a>
         </div>
       </div>
-      <div class="navigation">
-        <ul>
-          <li>
-            <a href="#">
-              <span class="icon"><ion-icon name="logo-apple"></ion-icon></span>
-              <span class="title">DW ADMIN</span>
-            </a>
-          </li>
-          <li>
-            <a href="./student">
-              <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
-              <span class="title">학생 목록</span>
-            </a>
-          </li>
-          <li>
-            <a href="./dept">
-              <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
-              <span class="title">과정 목록</span>
-            </a>
-          </li>
-          <!-- <li>
+    </div>
+    <div class="navigation">
+      <ul>
+        <li>
+          <a href="#">
+            <span class="icon"><ion-icon name="logo-apple"></ion-icon></span>
+            <span class="title">DW ADMIN</span>
+          </a>
+        </li>
+        <li>
+          <a href="./student">
+            <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
+            <span class="title">학생 목록</span>
+          </a>
+        </li>
+        <li>
+          <a href="./dept">
+            <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
+            <span class="title">과정 목록</span>
+          </a>
+        </li>
+        <!-- <li>
             <a href="#">
               <span class="icon"><ion-icon name="log-out-outline"></ion-icon></span>
               <span class="title">Sign Out</span>
             </a>
           </li> -->
-        </ul>
-      </div>
+      </ul>
     </div>
-    <!-- main -->
-    <div class="main">
-      <!-- cards -->
-      <div class="cardBox">
-        <div class="card">
-          <div>
-            <div id="studentsCnt" class="numbers">2</div>
-            <div class="cardName">학생 수</div>
-          </div>
-          <div class="iconBx">
-            <ion-icon name="school-outline"></ion-icon>
-          </div>
+  </div>
+  <!-- main -->
+  <div class="main">
+    <!-- cards -->
+    <div class="cardBox">
+      <div class="card">
+        <div>
+          <div id="studentsCnt" class="numbers">2</div>
+          <div class="cardName">학생 수</div>
         </div>
-        <div class="card">
-          <div>
-            <div id="boardCnt" class="numbers">27.6</div>
-            <div class="cardName">학생 평균나이</div>
-          </div>
-          <div class="iconBx">
-            <ion-icon name="book-outline"></ion-icon>
-          </div>
+        <div class="iconBx">
+          <ion-icon name="school-outline"></ion-icon>
         </div>
       </div>
-      <!-- table -->
-      <div class="details">
-        <div class="recentOrders">
-          <div class="cardHeader">
-            <h2>학생 목록</h2>
-            <!-- <a href="#" class="btn" style="background-color: #19ce60" onclick="downloadExcelFile()">엑셀 다운로드</a> -->
-            <a href="#" id="empAdd" class="btn">학생 추가</a>
-          </div>
-          <table>
-            <tr>
-              <th>학생 번호</th>
-              <th>학생 이름</th>
-              <th>학생 나이</th>
-              <th>학생 연락처</th>
-              <th>주소</th>
-              <th>과정 명</th>
-            </tr>
-            <tbody id="data"></tbody>
-          </table>
-          <!-- 페이징 처리하는 HTML -->
-          <div class="pagination">
-            <a>Previous</a>
-            <a>1</a>
-            <a>2</a>
-            <a>3</a>
-            <a>4</a>
-            <a>5</a>
-            <a>Next</a>
-          </div>
+      <div class="card">
+        <div>
+          <div id="boardCnt" class="numbers">27.6</div>
+          <div class="cardName">학생 평균나이</div>
+        </div>
+        <div class="iconBx">
+          <ion-icon name="book-outline"></ion-icon>
         </div>
       </div>
     </div>
-  </body>
-  <!-- Icon CDN -->
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  <!-- Jquery CDN -->
-  <script
-    src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-    crossorigin="anonymous"
-  ></script>
-  <!-- 도로명주소 CDN -->
-  <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-  <script>
-    // 학생 목록 페이지 테이블 생성
+    <!-- table -->
+    <div class="details">
+      <div class="recentOrders">
+        <div class="cardHeader">
+          <h2>학생 목록</h2>
+          <!-- <a href="#" class="btn" style="background-color: #19ce60" onclick="downloadExcelFile()">엑셀 다운로드</a> -->
+          <a href="#" id="empAdd" class="btn">학생 추가</a>
+        </div>
+        <table>
+          <tr>
+            <th>학생 번호</th>
+            <th>학생 이름</th>
+            <th>학생 나이</th>
+            <th>학생 연락처</th>
+            <th>주소</th>
+            <th>과정 명</th>
+          </tr>
+          <tbody id="data"></tbody>
+        </table>
+        <!-- 페이징 처리하는 HTML -->
+        <div class="pagination">
+          <a>Previous</a>
+          <a>1</a>
+          <a>2</a>
+          <a>3</a>
+          <a>4</a>
+          <a>5</a>
+          <a>Next</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+<!-- Icon CDN -->
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<!-- Jquery CDN -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<!-- 도로명주소 CDN -->
+<script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+<script>
+  // 학생 목록 페이지 테이블 생성 및 전체 조회
+  $.ajax({
+    url: '/api/v1/student',
+    type: 'GET',
+    dataType: 'json',
+    success: function (response) {
+      var avg = 0
+      var cnt = 0
+      for (var i = 0; i < response.length; i++) {
+        // tr = $('<tr onclick="getData(' + response[i].studentNum + ')"></tr>');
+        tr = $('<tr onclick="getData(' + ')"></tr>');
+        studentNum = $('<td>' + response[i].studentNum + '</td>');
+        studentName = $('<td>' + response[i].studentName + '</td>');
+        studentAge = $('<td>' + response[i].studentAge + '</td>');
+        avg += response[i].studentAge;
+        cnt++;
+        studentPhone = $('<td>' + response[i].studentPhone.substring(0, 3) + '-' + response[i].studentPhone.substring(3, 7) + '-' + response[i].studentPhone.substring(7, 11) + '</td>');
+        studentAddr = $('<td>' + response[i].studentAddr + '</td>');
+        processName = $('<td>' + response[i].process.processName + '</td>');
+        console.log(response[i].process.processName)
+        console.log(response[i]);
+        tr.append(studentNum);
+        tr.append($('<td>' + response[i].studentName + '</td>'));
+        tr.append(studentAge);
+        tr.append(studentPhone);
+        tr.append(studentAddr);
+        tr.append(processName);
+        $('#data').append(tr);
+      }
+      $("#studentsCnt").text(cnt);
+      $("#boardCnt").text(avg / cnt);
+      console.log(avg / cnt)
+    },
+  });
+
+  // 학생 정보 추가
+  function studentAdd() {
+    var name = $("#add-studentName").val();
+    var age = $("#add-studentAge").val();
+    var phoneNum = $("#add-studentPhone").val();
+    var addr = $("#add-studentAddr").val();
+
+    var jsonData = {
+      name: name,
+      age: age,
+      phoneNum: phoneNum,
+      addr: addr,
+    };
+
     $.ajax({
-      url: '/api/v1/student',
-      type: 'GET',
+      url: '/api/v1/add',
+      type: 'POST',
+      contentType: 'application/json', //서버에 json 타입으로 보낼 예정(요청)
+      data: JSON.stringify(jsonData),
       dataType: 'json',
       success: function (response) {
-        for (var i = 0; i < response.length; i++) {
-          tr = $('<tr onclick="getSubject(' + response[i].studentNum + ')"></tr>');
-          studentNum = $('<td>' + response[i].studentNum + '</td>');
-          studentName = $('<td>' + response[i].studentName + '</td>');
-          studentAge = $('<td>' + response[i].studentAge + '</td>');
-          studentPhone = $('<td>' + response[i].studentPhone + '</td>');
-          studentAddr = $('<td>' + response[i].studentAddr + '</td>');
-          processName = $('<td>' + response[i].process.processName + '</td>');
-          console.log(response[i]);
-          tr.append(studentNum);
-          tr.append($('<td>' + response[i].studentName + '</td>'));
-          tr.append(studentAge);
-          tr.append(studentPhone);
-          tr.append(studentAddr);
-          tr.append(processName);
-          $('#data').append(tr);
-        }
+        console.log(response);
+        alert('학생 등록 완료');
+        location.reload(); //강제 새로고침
       },
     });
 
-    $('#empAdd').click(function () {
-      $('.write-popup').css('display', 'block');
-    });
-    $('.btn-cancel').click(function () {
-      $('.write-popup').css('display', 'none');
-    });
-    $('.btn-close').click(function () {
-      $('.update-popup').css('display', 'none');
-    });
-    let list = document.querySelectorAll('.navigation li');
-    function activeLink() {
-      list.forEach((item) => {
-        item.classList.remove('hovered');
-      });
-      this.classList.add('hovered');
-    }
-    list.forEach((item) => {
-      item.addEventListener('mouseover', activeLink);
-    });
-    function getData() {
-      $('.update-popup').css('display', 'block');
-    }
 
-    //도로명 주소 함수
-    function getPostCode() {
-      new daum.Postcode({
-        oncomplete: function (data) {
-          // 도로명 주소의 노출 규칙에 따라 주소를 조합한다.
-          // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
-          var fullRoadAddr = data.roadAddress; // 도로명 주소 변수
-          var extraRoadAddr = ''; // 도로명 조합형 주소 변수
-          // 법정동명이 있을 경우 추가한다. (법정리는 제외)
-          // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
-          if (data.bname !== '' && /[동|로|가]$/g.test(data.bname)) {
-            extraRoadAddr += data.bname;
-          }
-          // 건물명이 있고, 공동주택일 경우 추가한다.
-          if (data.buildingName !== '' && data.apartment === 'Y') {
-            extraRoadAddr += extraRoadAddr !== '' ? ', ' + data.buildingName : data.buildingName;
-          }
-          // 도로명, 지번 조합형 주소가 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
-          if (extraRoadAddr !== '') {
-            extraRoadAddr = ' (' + extraRoadAddr + ')';
-          }
-          // 도로명, 지번 주소의 유무에 따라 해당 조합형 주소를 추가한다.
-          if (fullRoadAddr !== '') {
-            fullRoadAddr += extraRoadAddr;
-          }
-        },
-      }).open();
-    }
-  </script>
+
+  }
+
+
+  $('#empAdd').click(function () {
+    $('.write-popup').css('display', 'block');
+  });
+  $('.btn-cancel').click(function () {
+    $('.write-popup').css('display', 'none');
+  });
+  $('.btn-close').click(function () {
+    $('.update-popup').css('display', 'none');
+  });
+  let list = document.querySelectorAll('.navigation li');
+  function activeLink() {
+    list.forEach((item) => {
+      item.classList.remove('hovered');
+    });
+    this.classList.add('hovered');
+  }
+  list.forEach((item) => {
+    item.addEventListener('mouseover', activeLink);
+  });
+  function getData() {
+    $('.update-popup').css('display', 'block');
+  }
+
+  //도로명 주소 함수
+  function getPostCode() {
+    new daum.Postcode({
+      oncomplete: function (data) {
+        // 도로명 주소의 노출 규칙에 따라 주소를 조합한다.
+        // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+        var fullRoadAddr = data.roadAddress; // 도로명 주소 변수
+        var extraRoadAddr = ''; // 도로명 조합형 주소 변수
+        // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+        // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+        if (data.bname !== '' && /[동|로|가]$/g.test(data.bname)) {
+          extraRoadAddr += data.bname;
+        }
+        // 건물명이 있고, 공동주택일 경우 추가한다.
+        if (data.buildingName !== '' && data.apartment === 'Y') {
+          extraRoadAddr += extraRoadAddr !== '' ? ', ' + data.buildingName : data.buildingName;
+        }
+        // 도로명, 지번 조합형 주소가 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
+        if (extraRoadAddr !== '') {
+          extraRoadAddr = ' (' + extraRoadAddr + ')';
+        }
+        // 도로명, 지번 주소의 유무에 따라 해당 조합형 주소를 추가한다.
+        if (fullRoadAddr !== '') {
+          fullRoadAddr += extraRoadAddr;
+        }
+      },
+    }).open();
+  }
+</script>
+
 </html>
