--- a/src/main/resources/templates/dept.html
+++ b/src/main/resources/templates/dept.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CRUD! 😛</title>
-    <link rel="stylesheet" href="static/style.css" />
-    <style>
+    <link rel="stylesheet" href="/style.css" />
+    <!-- <style>
       body {
         margin: 0;
         padding: 0;
@@ -449,7 +449,7 @@
         color: #fff;
         border: none;
       }
-    </style>
+    </style> -->
   </head>
   <body>
     <div class="container">
